hphp/hack/test/typecheck/badglobal.php.exp
File "badglobal.php", line 5, characters 3-10:
Variable $GLOBALS is undefined, or there exists at least one control flow path reaching this point which does not define $GLOBALS. (Naming[2050])
