hphp/hack/test/typecheck/badglobal.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function foo():void {
  $GLOBALS['bar'] = 3;
}
